tests, fixes